src/contentScript/Content.css
#content-popup {
  color: black;
  background: white;
  box-shadow: grey 0px 0px 4px 0px;

  display: flex;
  /* justify-content: center; */
  position: fixed;
  top: 0;
  right: 0;
  width: 350px;
  max-height: 50vh;

  padding: 30px 35px 30px 30px;
  overflow: auto;
  box-sizing: border-box;

  font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.75;
  text-rendering: optimizeSpeed;
  z-index: 9999999;
}

#content-popup::-webkit-scrollbar{
  width: 8px;
}

#content-popup::-webkit-scrollbar-thumb{
  border: 3px solid transparent;
  border-radius: 8px;
  background: #c4c4c4;
}

#content-popup::-webkit-scrollbar-track{
  background: #f1f1f1;
}

#extention-loading {
  border: 16px solid #f3f3f3; 
  border-top: 16px solid #202020; 
  border-radius: 50%;
  width: 50px;
  height: 50px;
  animation: spin 1s linear infinite;
  box-sizing: border-box;
}

#copy-icon {
  position: fixed;
  top: 9px;
  cursor: pointer;
  right: 14px;
}

#copy-icon-text {
  position: fixed;
  font-size: 10px;
  top: 32px;
  right: 12px;
}

.btn-disabled {
  color: grey;
}

#response-text {
  white-space: pre-wrap;
}

#loading {
  font-weight: bold;
  display:inline-block;
  font-family: monospace;
  font-size: 30px;
  clip-path: inset(0 3ch 0 0);
  animation: l 1s steps(4) infinite;
}

@keyframes l {
  to {
    clip-path: inset(0 -1ch 0 0)
  }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

